# Joby

./: .env.example  .gitignore  README.md  docker-compose.yml  install.ps1  install.sh  start.sh  stop.sh
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260506_run_scoped_jobs.py  f287d18c4a3f_baseline.py
apps/api/app/: cli.py  config.py  db.py  main.py  models.py
apps/api/app/enrichment/: contacts.py  eligibility.py  tier.py  trust.py  visa.py
apps/api/app/profile/: presets.py  schema.py
apps/api/app/ranking/: engine.py
apps/api/app/routers/: applications.py  backfill.py  cold_email.py  companies.py  contacts.py  dashboard.py  export.py  health.py  jobs.py  notes.py  profile.py  runs.py  search.py  sources.py  watches.py
apps/api/app/scrapers/: ats.py  jobspy_daemon.py
apps/api/app/screener/: lmstudio.py  prefilter.py
apps/api/app/services/: diffing.py  discovery.py  freshness.py  rerank.py  run_lock.py  runner.py  scheduler.py  sources.py
apps/api/app/utils/: location_match.py  normalize.py
apps/api/tests/: conftest.py  test_api.py  test_ats_cache.py  test_backup.py  test_cli.py  test_contacts.py  test_diffing.py  test_eligibility.py  test_freshness.py  test_jobs_filters.py  test_jobspy_daemon.py  test_normalize.py  test_prefilter.py  test_profile.py  test_ranking.py  test_runner_cache.py  test_runs.py  test_search_api.py  test_sources_health.py  test_tier.py  test_trust.py  test_visa.py  test_watches_api.py
config/: sources.yaml  user_profile.example.yaml
scripts/: dev-up.sh  (+5 more)
(+23 files in other folders)
